# mcps

./: CONTRIBUTING.md  Cargo.toml  LICENSE  MCP.md  README.md  abc_reader  abc_writer  license-header.txt  licenserc.toml  test_input.txt
config/: config.toml
src/: client.rs  executor.rs  lib.rs  main.rs  server.rs
src/config/: mod.rs  transport_config.rs
src/schema/: client.rs  common.rs  json_rpc.rs  mod.rs  schema.rs  server.rs
src/support/: control_bus.rs  definition.rs  disruptor.rs  help.rs  job.rs  jobman.rs  logging.rs  mod.rs  sessons.rs  shared_memory.rs
src/transport/: common.rs  disruptor.rs  http_sse.rs  httpstream.rs  mod.rs  stdio.rs  stdio_disruptor.rs  trace.rs
