[package]
name = "mcps"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Anthropic's Model Context Protocol"
authors = ["open1s"]
license = "MIT"
repository = "https://github.com/open1s/mcps.git"
readme = "README.md"
keywords = ["mcp", "anthropic", "claude", "ai", "llm"]


[lib]
name = "mcps"
path = "src/lib.rs"

[[bin]]
name = "mcps"
path = "src/main.rs"

# Core dependencies for the mcpr library
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
dashmap = {version = "6.1", features = ["serde"]}
xxhash-rust = { version = "0",features = ["xxh3", "const_xxh3"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
url = "2.2.2" 
tiny_http = "0.12"
reqwest = { version = "0.12", features = [
    "json",
    "default-tls",
    "blocking",
] }
rand = "0"
tungstenite = { version = "0.20", features = ["native-tls"] }

