# Copyright (c) { props["inceptionYear"] } { props["copyrightOwner"] }
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.

[package]
name = "mcps"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Anthropic's Model Context Protocol"
authors = ["open1s"]
license = "MIT"
repository = "https://github.com/open1s/mcps.git"
readme = "README.md"
keywords = ["mcp", "anthropic", "claude", "ai", "llm"]


[lib]
name = "mcps"
path = "src/lib.rs"

[[bin]]
name = "mcps"
path = "src/main.rs"

# Core dependencies for the mcpr library
[dependencies]
log = { version = "0.4"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = {version = "1.0" }
dashmap = {version = "6.1", features = ["serde"]}
xxhash-rust = { version = "0",features = ["xxh3", "const_xxh3"] }
disruptor = {version = "3.3"}
lombok = { version = "0.4" }
nbus = { version = "2.4" }
bytes = {version = "1"}
memmap2 = "0.9"
log4rs = "1.3"
ibuf = { version = "0.3"}
ibag = { version = "0.3" }
rioc = { version = "0.2" }
iconfig = { version = "0.1" }
irgo = { version = "0.2"}
imacro = { version = "0.4" }


env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
url = "2.2.2" 
tiny_http = "0.12"
reqwest = { version = "0.12", features = [
    "json",
    "default-tls",
    "blocking",
] }
rand = "0"
tungstenite = { version = "0.20", features = ["native-tls"] }
libc = "0.2.171"
async-trait = "0.1.88"
tokio = "1.44.1"

